# MagicVial

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROGRESS.md  README.md  docker-compose.yml  package-lock.json  package.json
apps/backend/: .env  package.json  tsconfig.json
apps/backend/src/: index.ts
apps/backend/src/config/: database.ts
apps/backend/src/controllers/: material.controller.ts
apps/backend/src/middleware/: auth.middleware.ts  error.middleware.ts
apps/backend/src/models/: Material.model.ts  Recipe.model.ts  User.model.ts
apps/backend/src/routes/: crafting.routes.ts  guild.routes.ts  material.routes.ts  recipe.routes.ts  user.routes.ts
apps/backend/src/types/: express.d.ts  jest.d.ts  mongoose-extensions.d.ts
apps/backend/src/utils/: logger.utils.ts  solana.utils.ts
apps/backend/tests/: material.test.ts
apps/frontend/: package.json
apps/frontend/src/: App.tsx  index.css  index.tsx  polyfills.ts
apps/frontend/src/api/: solana.ts
apps/frontend/src/components/: Footer.tsx  LoadingIndicator.tsx  Navigation.tsx  ThemeToggle.tsx
apps/frontend/src/config/: settings.ts  solana.ts
apps/frontend/src/contexts/: AppContext.tsx  AppContextProvider.tsx  CraftingContext.tsx  (+3 more)
contracts/: Cargo.toml  Crafting.rs  Guild.rs  Material.rs  Recipe.rs
contracts/programs/crafting/: Cargo.toml
contracts/programs/crafting/src/: lib.rs
contracts/programs/guild/: Cargo.toml
contracts/programs/guild/src/: lib.rs
contracts/programs/material-nft/: Cargo.toml
contracts/programs/material-nft/src/: lib.rs
contracts/programs/recipe/: Cargo.toml
contracts/programs/recipe/src/: lib.rs
contracts/src/: errors.rs  lib.rs
contracts/src/developer_reputation/: mod.rs  reputation_operations.rs
contracts/src/liquidity_protocol/: liquidity_operations.rs  mod.rs
contracts/src/programs/: MagicVialToken.rs  lib.rs
contracts/src/programs/crafting/: mod.rs
contracts/src/programs/material/: mod.rs
contracts/src/programs/recipe/: mod.rs
contracts/src/token_creator/: mod.rs  token_operations.rs  tokenomics_templates.rs
contracts/src/verification/: mod.rs  verification_operations.rs
docs/en/: api_reference.md  crafting_system.md  development.md  guild_system.md
nginx/: default.conf
scripts/: cleanup.sh  prepare_project.sh
(+21 files in other folders)
