[package]
name = "magicvial"
version = "0.1.0"
description = "Solana Developer Launch Platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "magicvial"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16.15"
thiserror = "1.0.40"
borsh = "0.10.3"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0.0", features = ["no-entrypoint"] }
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] } 