[package]
name = "crafting"
version = "0.1.0"
description = "MagicVial alchemy platform's crafting system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "crafting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "=1.17.0"
material-nft = { path = "../material-nft", features = ["cpi"] }
recipe = { path = "../recipe", features = ["cpi"] } 