[package]
name = "recipe"
version = "0.1.0"
description = "Recipe program for MagicVial alchemy platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "recipe"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
solana-program = "1.14.16"
material-nft = { path = "../material-nft", features = ["cpi"] } 